# mars_segmentation

./: .gitignore  README.md  pyproject.toml
dataset/: __init__.py  ai4mars_dataset.py  augmentation.py  lit_mars_datamodule.py
model/: __init__.py  dino_mars_former.py  lit_dino_mars_former.py
notebooks/: data_exploration.ipynb
scripts/: train.py
